src/test/deca/context/invalid/langage_sans_objet/regles_communes/regle_0_1.deca
// Description:
//    regle 0.1 opération partielle
//
// Resultats:
//    Ligne 7: Undeclared identifier : 'a'.
{
    a = 1;
}

// raison : opération partielle
// "Identificateur non déclaré"
